Initial commit based on airbnb/rendr-app-template@0.1.3

--- a/app/templates/home/index.hbs
+++ b/app/templates/home/index.hbs
@@ -1,5 +1,4 @@
-<h1>Wecome to GitHub Browser!</h1>
-<p>This is a little app that demonstrates how to use Rendr by consuming GitHub's public Api.</p>
-<p>Check out <a href="/repos">Repos</a> or <a href="/users">Users</a>.</p>
+<h1>Wecome to Meditel!</h1>
+<p>Meditel helps doctors and medical professionals in developing countries with diagnosis and treatment by providing key information on basic mobile phones.</p>
 
 <p>{{copyright "2013"}}</p>
