--- a/app/templates/__layout.hbs
+++ b/app/templates/__layout.hbs
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
   <head>
     <meta charset='utf-8'/>
-    <title>Rendr Example App</title>
+    <title>Meditel</title>
 
     <link href="/styles.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
@@ -12,12 +12,10 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="/">GitHub Browser</a>
+          <a class="brand" href="/">Meditel</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="/">Home</a></li>
-              <li class="active"><a href="/repos">Repos</a></li>
-              <li class="active"><a href="/users">Users</a></li>
             </ul>
           </div>
           <div class="loading-indicator">Loading&hellip;</div>
