--- a/app/templates/home/index.hbs
+++ b/app/templates/home/index.hbs
@@ -1,4 +1,142 @@
-<h1>Wecome to Meditel!</h1>
-<p>Meditel helps doctors and medical professionals in developing countries with diagnosis and treatment by providing key information on basic mobile phones.</p>
+			<div class="row-fluid">
+				<div class="span12">
+					<div class="hero-unit">
+					  <h2>Harnassing the potential of USSD</h2>
+					 <p>We created an API that integrated with the USSD messaging application that enables mobile doctors and the 14,000 health workers in Uganda, to appropriately co-ordinate and diagnose symptons of Life Threating Deseases and Virus's</p>
+					</div>
+			</div>
+			<div class="row-fluid">
+				<div class="span12">
+					<div class="row-fluid">
+						<div class="span12">
+							<div class="row-fluid">
+								<div class="span6">
+									<div class="page-header">
+										<h3>What is it?<small> An introduction</small></h3>
+									</div>
+									<p>Meditel is way of providing information to Community Health
+										Workers in Rural Africa providing them with more tools in order
+										to:</p>
 
-<p>{{copyright "2013"}}</p>
+									<ul>
+										<li>Enable fast and appropriate decisions to be made
+											regarding an individual’s care</li>
+
+										<li>Share knowledge to empower community health
+											workers</li>
+
+										<li>Reduce the burden on overstretched health facilities by
+											only referring serious cases forward</li>
+									</ul>
+					
+									<p>Meditel does this by accessing a decision tree through an SMS like function called USSD. USSD enables community health worker through a series of questions to determine an answer.</p>
+								</div>
+								<div class="span6" id="globe">
+									<img src="images/tree.png" />
+									
+										<p style="p_info"><small>A very basic process that is used by USSD. A question is asked, dependant on the answer the path will go either two ways, asking another quesion to find the result. </small></p>
+								</div>
+				</div>
+				</div>
+				</div>
+			    <div class="page-header">
+						<h3>Aims &amp; Objectives <small>Erasing the facts</small></h1>
+					</div>
+
+					<blockquote class="chunk">
+						Every year, an estimated 6.9 million children die
+						before they reach the age of five.
+					</blockquote>
+
+					<p>Help community health workers make appropriate care
+						decisions</p>
+
+					<h5>How?</h5>
+
+					<p>By guiding the process to diagnose, treat and refer
+						patients as necessary with minimal training based on the
+						existence and severity of symptoms</p>
+					
+						<div class="row-fluid">
+							<div class="span12">
+						    <div class="page-header">
+									<h3>Why is it important?</h3>
+								</div>
+							
+							<div class="row-fluid">
+								<div class="span6">
+									<div class="row-fluid">
+									<div class="span6">
+                                        <blockquote>
+                                            Malaria for example, is the leading
+                                            cause of morbidity and mortality,
+                                            and accounts for 25-40% of
+                                            outpatient visits.
+                                        </blockquote>
+
+                                        <div class=
+											 "progress progress-info progress-striped">
+											<div class="bar" style="width: 40%">
+                                            </div>
+                                        </div>
+
+									</div>
+									<div class="span6">
+										<blockquote>
+											Malaria accounts for 15-20% of
+											all hospital admissions
+										</blockquote>
+
+										<div class=
+											 "progress progress-info progress-striped">
+                                            <div class="bar" style=
+												 "width: 20%"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="span6">
+								<div class="row-fluid">
+									<div class="span6">
+                             <blockquote>
+                                            34% of total expenditure for the poorest sections of society. 
+                                        </blockquote>
+
+                                        <div class=
+											 "progress progress-info progress-striped">
+											<div class="bar" style="width: 34%">
+                                            </div>
+                                        </div>
+
+									</div>
+									<div class="span6">
+										<blockquote>
+											Ugandan climate allows high levels of Malaria Transmission in 90% of the country
+										</blockquote>
+
+										<div class=
+											 "progress progress-info progress-striped">
+                                            <div class="bar" style=
+												 "width: 90%"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		Future prospects of working directly with the Malarian Consortium inScale project as well as other programs/projects that are finding collaborative ways to effectively diagnose and treat patients.
+
+		<div class="container-fluid" id="phone_em">
+			<div class="row-fluid">
+				<div class="span5">
+					<h3>Mobile Emulation</h3>
+
+					<p>An example of using USSD in order to correctly
+                        assess a patient.</p>
+				</div>
+
+				<div class="span7" id="ussd_demo"></div>
+			</div>
