Added pages & content to about, contact, home and demo

--- a/app/templates/__layout.hbs
+++ b/app/templates/__layout.hbs
@@ -22,9 +22,10 @@
 			<div class="container-narrow">
 				<div class="masthead">
 					<ul class="nav nav-pills pull-right">
-						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#">About</a></li>
-						<li><a href="#">Contact</a></li>
+						<li class="active"><a href="/">Home</a></li>
+						<li><a href="/about">About</a></li>
+						<li><a href="/demo">Demo</a></li>
+						<li><a href="/contact">Contact</a></li>
 					</ul>
 					<h1>Med<span class="turq">i</span><span class="thin">tel</span></h1>
 				</div>
@@ -57,7 +58,7 @@
 			<section id=content class=container-fluid>
 				{{{body}}}
 			</section>
-
+			
 			<div id="footer">
 				<div class="container-fluid">
 					<div class="span4">
