--- a/app/templates/home/index.hbs
+++ b/app/templates/home/index.hbs
@@ -29,7 +29,7 @@
 											only referring serious cases forward</li>
 									</ul>
 					
-									<p>Meditel does this by accessing a decision tree through an SMS like function called USSD. USSD enables community health worker through a series of questions to determine an answer.</p>
+									<p>Meditel does this by accessing a decision tree through an SMS-like function called USSD. USSD enables community health worker through a series of questions to determine an answer.</p>
 								</div>
 								<div class="span6" id="globe">
 									<img src="images/tree.png" />
