--- a/assets/stylesheets/index.styl
+++ b/assets/stylesheets/index.styl
@@ -77,6 +77,7 @@ body
 	display: block
 	margin: 0 auto
 	z-index:10
+
 	.bx-wrapper
 		overflow: hidden
 		position: relative
@@ -117,12 +118,17 @@ body
 	display:block
 	background-color:#333
 	color:white
+	.person
+		margin-bottom:10px
+		text-align:center
 	ul
 		li
 			padding-left:10px
 			background:url('images/triangle.png') no-repeat 0 -10px transparent
 			list-style:none
 			margin-bottom:12px
+.team-image
+	margin-bottom:20px
 #globe
 	padding-top:20px
 	img
@@ -186,3 +192,6 @@ blockquote
 		h2
 			font-size:28px
 			
+label
+	color:#333
+.middle
